fixed layout bugs

--- a/src/components/elements/Header/header.module.scss
+++ b/src/components/elements/Header/header.module.scss
@@ -18,6 +18,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  row-gap: 10px;
 
   padding: 16px 0;
 }
