--- a/src/components/pages/ProductPage/card.module.scss
+++ b/src/components/pages/ProductPage/card.module.scss
@@ -173,12 +173,6 @@
   }
 }
 
-@media(max-width:662px) {
-  .card {
-    justify-content: center;
-  }
-}
-
 @media (max-width:620px) {
   .card__left {
     max-width: 100%;
